fix settings formatting on iPhone

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -133,6 +133,13 @@ td {
     vertical-align: top;
 }
 
+table.settings td,
+table.settings label,
+table.password td,
+table.password label {
+    vertical-align: middle;
+}
+
 .modal {
     display: none;
     position: fixed;
